correct zoom bug on mobile device

--- a/css/style.css
+++ b/css/style.css
@@ -256,7 +256,7 @@ form {
 	}
 
 	.login-content .logo {
-		width: 75%;
+		width: 100%;
 		text-align: center;
 		padding-top: 5rem;
 	}
